feat: implementa modulo de perforaciones
